# Bettercurl

./: .gitignore  Cargo.toml  README.md  TODO.md  plan.md
.github/workflows/: ci.yml
scripts/: install.sh  release.sh
src/: main.rs
