[package]
name = "bettercurl"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
reqwest = { version = "0.13.2", features = ["json", "multipart", "stream", "form"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.43", features = ["full"] }
colored = "2.1"
indicatif = "0.17"
dialoguer = "0.11"
dirs = "6.0"
toml = "0.8"
chrono = "0.4"
uuid = { version = "1.11", features = ["v4"] }
regex = "1.11"
